# DjangoVerseHub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_djangoverse_structure.sh  manage.py  pyproject.toml  pyrightconfig.json
apps/: __init__.py
apps/api/: __init__.py  app.py  pagination.py  permissions.py  routers.py  throttling.py  urls.py  views.py
apps/articles/: __init__.py  admin.py  apps.py  cache.py  forms.py  managers.py  models.py  pagination.py  search.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/articles/migrations/: __init__.py
apps/articles/templates/articles/: article_create.html  article_detail.html  article_edit.html  article_list.html  base.html
apps/articles/tests/: test_api.py  test_cache.py  test_forms.py  test_models.py  test_views.py
apps/comments/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/comments/migrations/: __init__.py
apps/comments/templates/comments/: comment_form.html  comment_list.html  comment_thread.html
apps/comments/tests/: test_api.py  test_models.py  test_views.py
apps/notifications/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/notifications/templates/notifications/: base.html  notification_list.html  notifications_ws.html
apps/notifications/tests/: test_consumers.py  test_models.py  test_signals.py
apps/users/: __init__.py  admin.py  apps.py  cache.py  forms.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/users/migrations/: __init__.py
apps/users/templates/users/: base.html  login.html  password_reset.html  profile.html  signup.html
apps/users/templates/users/emails/: password_reset.html  verify_email.html  welcome.html
apps/users/tests/: test_api.py  test_forms.py  test_models.py  test_views.py
django_verse_hub/: __init__.py  asgi.py  celery.py  middleware.py  permissions.py  urls.py  utils.py  wsgi.py
django_verse_hub/settings/: __init__.py  base.py  caching.py  celery.py  dev.py  email.py  logging.py  prod.py  security.py  test.py
docs/: api-docs.md  concept-index.md  setup-guide.md
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: __init__.py
scripts/management/: __init__.py
scripts/management/commands/: __init__.py  cleanup_unused_media.py  generate_demo_data.py  send_bulk_notifications.py
static/css/: base.css  components.css  forms.css
static/js/: api.js  cache-sw.js  main.js  notifications.js
templates/: base.html
templates/emails/: bulk_notification.txt  comment_digest.html  comment_digest.txt  comment_like_notification.html  comment_like_notification.txt  comment_notification.html  comment_notification.txt  email_verification.html  email_verification.txt  password_reset.html  password_reset.txt  welcome.html  welcome.txt
templates/errors/: 400.html  403.html  404.html  500.html
templates/includes/: footer.html  navbar.html  pagination.html
templates/includes/cache/: popular_articles.html  user_sidebar.html
tests/: __init__.py  conftest.py  test_integration.py  test_performance.py  test_settings.py  test_urls.py
